syntax = "proto3";

package pb;


option go_package = "server-test/pb";

message DataInfo{
    string name = 1;
    string fullname = 2;
}